--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^10.5.2",
+    "material-icons": "^1.13.12",
+    "pinia": "^2.1.4",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuefire": "^3.1.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "vue-cli-plugin-pinia": "~0.2.4"
   }
 }
