--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
+    "tailwindcss-3d": "^1.0.2",
     "vue-cli-plugin-pinia": "~0.2.4"
   }
 }
