--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vueuse/sound": "^2.0.1",
     "core-js": "^3.8.3",
     "firebase": "^10.5.2",
     "material-icons": "^1.13.12",
