--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "material-icons": "^1.13.12",
     "pinia": "^2.1.4",
     "register-service-worker": "^1.7.2",
+    "sweetalert2": "^11.8.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuefire": "^3.1.17"
