--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vueuse/core": "^10.5.0",
     "@vueuse/sound": "^2.0.1",
+    "axios": "^1.6.0",
     "core-js": "^3.8.3",
     "firebase": "^10.5.2",
     "material-icons": "^1.13.12",
