--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sweetalert2": "^11.8.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuefire": "^3.1.17"
+    "vuefire": "^3.1.17",
+    "axios":"^1.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
