--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "core-js": "^3.8.3",
     "firebase": "^10.5.2",
     "material-icons": "^1.13.12",
+    "moment": "^2.29.4",
+    "momment": "^0.0.1",
     "pinia": "^2.1.4",
     "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.8.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-google-signin": "^1.3.1",
     "vuefire": "^3.1.17"
   },
   "devDependencies": {
